Text spacing on Rdio

--- a/rdio.html
+++ b/rdio.html
@@ -243,7 +243,7 @@
   <div class="full_background rdio_blue">
     <div class="container rdio">
       <div class="row group">
-        <div class="offset-by-two twelve columns">
+        <div class="offset-by-two twelve columns spacer_bottom">
           <div class="spacer_small"></div>
           <p>We decided to table the bottom nav because our player was core to the Rdio experience on both mobile and web. It served as a constant across platforms, setting context and allowing immediate access to your current listening activity. It was arguably the most important piece of the app, and we felt we should design the new navigation around the player rather than shoehorn it into an ill-fitting pattern.</p><br>
         </div>
@@ -300,8 +300,8 @@
       </div>
       <div class="row group">
         <div class="offset-by-two twelve columns">
-          <p>The original sidenav was so overloaded with text that users were unlikely to digest much at a glance. This new structure would increase speed and ease of use while boosting feature engagement.</p>
-          <div class="spacer_small"></div>
+          <br><p>The original sidenav was so overloaded with text that users were unlikely to digest much at a glance. This new structure would increase speed and ease of use while boosting feature engagement.</p>
+          <div class="spacer_small spacer_bottom"></div>
         </div>
       </div>
     </div>
@@ -339,7 +339,7 @@
         </div>
       </div>
       <div class="row group">
-        <div class="offset-by-two twelve columns">
+        <div class="offset-by-two twelve columns spacer_bottom">
           <br><h5>The Process</h5>
           <p>We had originally thought to present three additional actions to users who had given a song a thumbs up: Favorite, Download, and Start Song Station. In practice, three actions felt too overwhelming. It also blurred the line between this feature and the action sheets that could already be revealed by long-pressing on a song.<br></p>
         </div>
@@ -368,7 +368,7 @@
         </div>
       </div>
       <div class="row group">
-        <div class="offset-by-two twelve columns">
+        <div class="offset-by-two twelve columns spacer_bottom">
           <p>The second piece of this project was the “Manage Bans” interface. The need was straightforward: give users a central place to view and edit their list of banned music. The tricky part was minimizing the cognitive dissonance around removing a ban. It’s a double negative problem—deleting a list item is usually a destructive action, but in this case the two negatives resulted in a positive. Removing a ban would bring that song or artist back into your Rdio experience.<br></p>
         </div>
       </div>
@@ -389,7 +389,7 @@
       </div>
       <div class="row group">
         <div class="offset-by-two twelve columns">
-          <p>My first attempts used the same list editing pattern as our playlists. This is when we raised the concern about double negatives and decided to do some further exploration. The next designs are much more explicit about the actions a user can perform. The main weakness of these designs, however, was that they felt heavy-handed. Sure, they were more explicit, but they also made us wonder if we were underestimating our users.<br></p>
+          <br><p>My first attempts used the same list editing pattern as our playlists. This is when we raised the concern about double negatives and decided to do some further exploration. The next designs are much more explicit about the actions a user can perform. The main weakness of these designs, however, was that they felt heavy-handed. Sure, they were more explicit, but they also made us wonder if we were underestimating our users.</p><br>
         </div>
       </div>
       <div class="row group">
