Make invision embed responsive

--- a/other.html
+++ b/other.html
@@ -104,7 +104,10 @@
     </div>
     <div class="row group">
       <div class="offset-by-four eight columns">
-        <iframe width="438" height="930" src="//invis.io/N458TA3S8" frameborder="0" allowfullscreen></iframe>
+        <div class="h_iframe">
+          <img class="ratio" src="http://placehold.it/438x930">
+          <iframe src="//invis.io/N458TA3S8" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
     <div class="row group">
