--- a/other.html
+++ b/other.html
@@ -105,8 +105,7 @@
     <div class="row group">
       <div class="offset-by-four eight columns">
         <div class="h_iframe">
-          <img class="ratio" src="http://placehold.it/438x930">
-          <iframe src="//invis.io/N458TA3S8" frameborder="0" allowfullscreen></iframe>
+          <iframe width="438" height="930" src="//invis.io/N458TA3S8" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
