--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
 
           I’ve spent some time learning to make the Internet a little more human at <a href="http://wistia.com/" target="_blank">Wistia</a> and <a href="https://www.rdio.com" target="_blank">Rdio.</a> As a result, my experience lies in both consumer and enterprise products across mobile and web platforms. (Between you and me, mobile may be my favorite.) I’m also into interior design and amateur photography.<br><br>
 
-          This May, I’ll graduate from Northeastern with a degree in Business and Interaction Design, which roughly translates to “how to define problems and then solve them.” I’m currently exploring opportunities for a full-time position after graduation. Want to chat? Drop me a line at <a href="mailto:maddiesimens@gmail.com?subject=Hello" onclick="trackOutboundLink('mailto:maddiesimens@gmail.com?subject=Hello');">maddiesimens@gmail.com.</a></p>
+          This May, I’ll graduate Northeastern with a degree in Business and Interaction Design, which roughly translates to “how to define problems and then solve them.” I’m currently exploring opportunities for a full-time product design position after graduation. Want to chat? Drop me a line at <a href="mailto:maddiesimens@gmail.com?subject=Hello">maddiesimens@gmail.com.</a></p>
         </div>
 
         <div class="row group">
