Add copyright to footer

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
             <a href="https://twitter.com/maddiesimens" target="_blank"><img src="images/twitter.png" style="width:21px;"></a>    
             <a href="https://www.instagram.com/maddie_simens/" target="_blank"><img src="images/instagram.png" style="width:19px;"></a>
             <a href="https://www.linkedin.com/in/madelinesimens" target="_blank"><img src="images/linkedin.png" style="width:21px;"></a>
-            <a href="mailto:maddiesimens@gmail.com?subject=Hello"><img src="images/email.png" style="width:22px; padding-top:2px;"></a>
+            <a href="mailto:maddiesimens@gmail.com?subject=Hello"><img src="images/email.png" style="width:22px; padding-top:2px;"></a><br>
+            <div id="copyright">&copy; Maddie Simens 2016</div>
           </footer>
         </div>
       </div>
