--- a/spacex.html
+++ b/spacex.html
@@ -23,9 +23,14 @@
   </head>
 
   <body>
+  	<div class="container spacex">
+  		<div class="row group">
+      		<div class="sixteen columns">
+      			<div class="spacer"></div>
+ 				 <script charset="ISO-8859-1" src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:75.0% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_xa8jd3cc2y videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
+ 			</div>
+ 		</div>
+ 	</div>
 
-  <script charset="ISO-8859-1" src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:75.0% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_xa8jd3cc2y videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
-
-  <script charset="ISO-8859-1" src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_embed wistia_async_xa8jd3cc2y" style="height:1440px;width:1080px">&nbsp;</div>
 
   </body>
