background color tweak attempt #2

--- a/spacex.html
+++ b/spacex.html
@@ -22,8 +22,8 @@
 
   </head>
 
-  <body>
-  	<div class="container spacex">
+  <body class="spacex">
+  	<div class="container">
   		<div class="row group">
       		<div class="sixteen columns">
       			<div class="spacer_small"></div>
