About copy and remove video page

--- a/about.html
+++ b/about.html
@@ -98,10 +98,7 @@
           <div id="hero_text_alt">Above all, I strive to be<br>thoughtful in my work.</div>
           <p id="about_text">To me, thoughtful design is systematic and well-considered—driven by strong opinions, loosely held. It is propelled by curiosity and constantly asking questions. When done right, it feels human.<br><br>
 
-          I’ve spent some time learning to make the Internet a little more human at <a href="http://wistia.com/" target="_blank">Wistia</a> and <a href="https://www.rdio.com" target="_blank">Rdio.</a> As a result, my experience lies in designing both consumer and enterprise products across mobile and web platforms. I’m also into interior design and amateur photography.<br><br>
-
-          This May, I’ll graduate Northeastern with a degree in Business and Interaction Design, which roughly translates to “how to define problems and then solve them.” I’m currently exploring opportunities for a full-time product design position after graduation. Want to chat? Drop me a line at <a href="mailto:maddiesimens@gmail.com?subject=Hello">maddiesimens@gmail.com.</a></p>
-        </div>
+          I recently graduated from Northeastern University with a degree in Business and Interaction Design, which roughly translates to “how to define problems and then solve them.” I've spent some time learning to make the Internet a little more human at <a href="http://wistia.com/" target="_blank">Wistia</a> and <a href="https://www.rdio.com" target="_blank">Rdio.</a> As a result, my experience lies in designing both consumer and enterprise products across mobile and web platforms. I’m also into interior design and amateur photography. <a href="https://twitter.com/maddiesimens" target="_blank">Say hi!</a>
 
         <div class="row group">
           <div class="sixteen columns">
