--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
+  <div class="container fadeIn one">
       <nav>
         <div class="row group">
           <div class="sixteen columns">
