--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
         <div class="eight columns">
           <div id="dividers"><h1>HI I'M MADDIE,<br>I DO UX DESIGN<br>AT A PLACE CALLED <a href="https://stripe.com/" target="_blank">STRIPE.</a></h1><br></div>
 
-          <body> Previously, I had the privilege of working<br> with the teams at Rdio and <a href="https://wistia.com/" target="_blank">Wistia</a> while<br> studying interaction design and business<br> at Northeastern University. I live in San<br> Francisco by way of Boston by way of<br>Cleveland. I like to ask questions.<br><br>
-
-           Say hi — <a href="mailto:maddiesimens@gmail.com?subject=Hello" onclick="trackOutboundLink('mailto:maddiesimens@gmail.com?subject=Hello');">maddiesimens@gmail.com.</a></body>
+          <body>I'd like to make the internet a little more<br>human. Previously, I had the privilege of <br>working with the teams at Rdio and <br><a href="https://wistia.com/" target="_blank">Wistia</a> while studying interaction design <br>and business at Northeastern University.<br> I live in San Francisco by way of Boston <br>by way of Cleveland. Say hi. </body>
         </div>
       </div>
 
