--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <a href="mailto:maddiesimens@gmail.com?subject=Hello">Email</a>
             <a href="https://twitter.com/maddiesimens" target="_blank">Twitter</a>    
             <a href="https://www.linkedin.com/in/madelinesimens" target="_blank">LinkedIn</a>
-            <a href="https://www.instagram.com/maddie_simens/" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/maddiesimens/" target="_blank">Instagram</a>
           </footer>
         </div>
       </div>
