--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="images/moon.png">
 
   <!-- jsQuery
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
