Revert "Reposition icon on mobile"
This reverts commit ea1ced5329308fa167100553a28e73b5731f709b.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ var x = setInterval(function() {
 <body class="night">
 <div class="container animated fadeIn one">
   <div class="row group">
-    <div class="three columns icon">
+    <div class="three columns">
    		<img src="images/moon.svg" id="moon">
       <img src="images/sun.svg" id="sun">
     </div>
