--- a/index.html
+++ b/index.html
@@ -111,17 +111,17 @@ var x = setInterval(function() {
     </div>
 
     <div class="six columns offset-by-three">
-      <h1 class="night">maddie<br>simens</h1>
+      <h1 class="night">Hi, I'm Maddie.</h1>
 
       <div class="animated fadeIn two">
-       <p>Hi, I’m Maddie. I’ve been designing products at Stripe for the last <span id="counter"><br></span>.</p>
+       <p>Some people call me Madeline. I’ve been designing products at Stripe for the last <span id="counter"><br></span>.</p>
 
        <p>I live in San Francisco by way of Boston by way of Cleveland. Say hi sometime.</p>
 
       <h2 class="night">
-        <a href="https://twitter.com/maddiesimens" target="_blank">Twitter</a>    
-        <a href="https://www.instagram.com/maddiesimens/" target="_blank">Instagram</a>
-        <a href="mailto:maddiesimens@gmail.com?subject=Hello">Email</a>
+        <a href="https://twitter.com/maddiesimens" target="_blank" class="underline">Twitter</a>    
+        <a href="https://www.instagram.com/maddiesimens/" target="_blank" class="underline">Instagram</a>
+        <a href="mailto:maddiesimens@gmail.com?subject=Hello" class="underline">Email</a>
       </h2>
 
       <div class="spacer48"></div>
@@ -136,7 +136,7 @@ var x = setInterval(function() {
 
   <div class="row group">
     <div class="three columns offset-by-six animated fadeIn three">      
-      <h2 class="night">Stripe</h2>
+      <h2 class="night"><a href="https://stripe.com/" target="_blank" class="underline">Stripe</a></h2>
     </div>  
     <div class="three columns animated fadeIn three">
       <h3>UX Designer</h3>
@@ -146,7 +146,7 @@ var x = setInterval(function() {
 
   <div class="row group">
     <div class="three columns offset-by-six animated fadeIn three">      
-      <h2 class="night">Wistia</h2>
+      <h2 class="night"><a href="https://wistia.com/" target="_blank" class="underline">Wistia</a></h2>
     </div>  
     <div class="three columns animated fadeIn three">
       <h3>Product Designer</h3>
@@ -178,7 +178,7 @@ var x = setInterval(function() {
   <div class="row group">
 
     <div class="three columns offset-by-six animated fadeIn three">
-      <h2 class="night">Northeastern University</h2>
+      <h2 class="night"><a href="https://www.northeastern.edu/" target="_blank" class="underline">Northeastern University</a></h2>
     </div>  
 
     <div class="three columns animated fadeIn three">
@@ -190,7 +190,7 @@ var x = setInterval(function() {
 
   <div class="row group">
     <div class="six columns offset-by-six animated fadeIn three">
-      <footer>&copy; Maddie Simens 2018</footer>
+      <footer>&copy; MADDIE SIMENS 2018</footer>
     </div>
   </div>
 
