--- a/index.html
+++ b/index.html
@@ -116,13 +116,8 @@ var x = setInterval(function() {
       <div class="animated fadeIn two">
        <p>Some people call me Madeline. I’ve been designing products at Stripe for the last <span id="counter"><br></span>.</p>
 
-       <p>I live in San Francisco by way of Boston by way of Cleveland. Say hi sometime.</p>
+       <p>I live in San Francisco by way of Boston by way of Cleveland. Keep up with me on <a href="https://www.instagram.com/maddiesimens/" target="_blank" class="underline">Instagram</a> or say hi on <a href="https://twitter.com/maddiesimens" target="_blank" class="underline">Twitter.</a> Need more than 280 characters? <a href="mailto:maddiesimens@gmail.com?subject=Hello" class="underline"> Send me an email.</a></p>
 
-      <h2 class="night">
-        <a href="https://twitter.com/maddiesimens" target="_blank" class="underline">Twitter</a>    
-        <a href="https://www.instagram.com/maddiesimens/" target="_blank" class="underline">Instagram</a>
-        <a href="mailto:maddiesimens@gmail.com?subject=Hello" class="underline">Email</a>
-      </h2>
 
       <div class="spacer48"></div>
 
