Mostly animation polish

--- a/index.html
+++ b/index.html
@@ -150,8 +150,9 @@ var x = setInterval(function() {
   </div>  
 
   <div class="row group">
-    <div class="three columns offset-by-six animated fadeIn three">      
-      <h2 class="night">Rdio</h2>
+    <div class="three columns offset-by-six animated fadeIn three">  
+        <h2 class="night underline-rdio">Rdio</h2>
+        <div id="rdio-psa">Acquired by Pandora</div>
     </div>  
     <div class="three columns animated fadeIn three">
       <h3>UX Design Co-op</h3>
