--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Maddie Simens</title>
-  <meta name="description" content="I'm Maddie Simens, a UX designer at Stripe."
+  <meta name="description" content="Product design at OpenAI"
   <meta name="author" content="">
 
   <!-- Mobile Specific Metas
@@ -45,7 +45,7 @@
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Aug 1, 2016 09:00:00").getTime();
+var countDownDate = new Date("Nov 30, 2020 09:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -68,7 +68,7 @@ var x = setInterval(function() {
     // If the count down errors, write some text 
     if (distance < 0) {
         clearInterval(x);
-        document.getElementById("counter").innerHTML = "2 years";
+        document.getElementById("counter").innerHTML = "year";
     }
 }, 1000);
 </script>
@@ -114,7 +114,7 @@ var x = setInterval(function() {
       <h1 class="night">Hi, I'm Maddie.</h1>
 
       <div class="animated fadeIn two">
-       <p>Some people call me Madeline. I’ve been designing products at Stripe for the last <span id="counter"><br></span>.</p>
+       <p>Some people call me Madeline. I’ve been designing product at OpenAI for the last <span id="counter"><br></span>.</p>
 
        <p>I live in San Francisco by way of Boston by way of Cleveland. Keep up with me on <a href="https://www.instagram.com/maddiesimens/" target="_blank" class="underline">Instagram</a> or <a href="https://twitter.com/maddiesimens" target="_blank" class="underline">Twitter.</a> Need more than 280 characters? <a href="mailto:maddiesimens@gmail.com?subject=Hello" class="underline"> Send me an email.</a></p>
 
@@ -128,14 +128,24 @@ var x = setInterval(function() {
     </div>
 
   </div>
+  
+    <div class="row group">
+    <div class="three columns offset-by-six animated fadeIn three">      
+      <h2 class="night"><a href="https://openai.com/" target="_blank" class="underline">OpenAI</a></h2>
+    </div>  
+    <div class="three columns animated fadeIn three">
+      <h3>Product Designer</h3>
+      <h4>Now</h4>
+    </div>
+  </div>
 
   <div class="row group">
     <div class="three columns offset-by-six animated fadeIn three">      
       <h2 class="night"><a href="https://stripe.com/" target="_blank" class="underline">Stripe</a></h2>
     </div>  
     <div class="three columns animated fadeIn three">
-      <h3>UX Designer</h3>
-      <h4>2016–Now</h4>
+      <h3>Product Designer</h3>
+      <h4>2016–2020</h4>
     </div>
   </div>
 
@@ -184,11 +194,6 @@ var x = setInterval(function() {
 
   </div>
 
-  <div class="row group">
-    <div class="six columns offset-by-six animated fadeIn three">
-      <footer>&copy; MADDIE SIMENS 2018</footer>
-    </div>
-  </div>
 
 </div>
 
