--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ var x = setInterval(function() {
       <h1 class="night">Hi, I'm Maddie.</h1>
 
       <div class="animated fadeIn two">
-       <p>Some people call me Madeline. I’ve been designing product at OpenAI for the last <span id="counter"><br></span>.</p>
+       <p>Some people call me Madeline. I’ve been designing at OpenAI for the last <span id="counter"><br></span>.</p>
 
        <p>I live in San Francisco by way of Boston by way of Cleveland. Keep up with me on <a href="https://www.instagram.com/maddiesimens/" target="_blank" class="underline">Instagram</a> or <a href="https://twitter.com/maddiesimens" target="_blank" class="underline">Twitter.</a> Need more than 280 characters? <a href="mailto:maddiesimens@gmail.com?subject=Hello" class="underline"> Send me an email.</a></p>
 
@@ -135,7 +135,7 @@ var x = setInterval(function() {
     </div>  
     <div class="three columns animated fadeIn three">
       <h3>Product Designer</h3>
-      <h4>Now</h4>
+      <h4>2020–Now</h4>
     </div>
   </div>
 
