--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ var x = setInterval(function() {
       <h1 class="night">Hi, I'm Maddie.</h1>
 
       <div class="animated fadeIn two">
-       <p>Some people call me Madeline. I’ve been designing at OpenAI for the last <span id="counter"><br></span>.</p>
+       <p>Some people call me Madeline. I’ve been designing at <a href="https://openai.com/" target="_blank" class="underline">OpenAI</a> for the last <span id="counter"><br></span>.</p>
 
        <p>I live in San Francisco by way of Boston by way of Cleveland. Keep up with me on <a href="https://www.instagram.com/maddiesimens/" target="_blank" class="underline">Instagram</a> or <a href="https://twitter.com/maddiesimens" target="_blank" class="underline">Twitter.</a> Need more than 280 characters? <a href="mailto:maddiesimens@gmail.com?subject=Hello" class="underline"> Send me an email.</a></p>
 
@@ -123,7 +123,7 @@ var x = setInterval(function() {
 
       </div>
 
-      <h4 class="animated fadeIn three">Experience</h4> 
+      <h4 class="animated fadeIn three">PREVIOUSLY</h4> 
 
     </div>
 
@@ -168,30 +168,6 @@ var x = setInterval(function() {
       <h3>UX Design Co-op</h3>
       <h4>2014</h4>
     </div>
-  </div>
-
-  <div class="row group">
-    <div class="three columns offset-by-six animated fadeIn three">
-
-      <div class="spacer48"></div>
-
-      <h4>Education</h4>
-
-    </div>
-
-  </div>
-
-  <div class="row group">
-
-    <div class="three columns offset-by-six animated fadeIn three">
-      <h2 class="night"><a href="https://www.northeastern.edu/" target="_blank" class="underline">Northeastern University</a></h2>
-    </div>  
-
-    <div class="three columns animated fadeIn three">
-      <h3>Interaction Design and Business</h3>
-      <h4>2011–2016</h4>
-    </div>
-
   </div>
 
 
