--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ var x = setInterval(function() {
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-<body class="night">
+<body class="day">
 <div class="container animated fadeIn one">
   <div class="row group">
     <div class="three columns icon">
