--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ var x = setInterval(function() {
       <div class="animated fadeIn two">
        <p>Some people call me Madeline. I’ve been designing at <a href="https://openai.com/" target="_blank" class="underline">OpenAI</a> for the last <span id="counter"><br></span>.</p>
 
-       <p>I live in San Francisco by way of Boston by way of Cleveland. Keep up with me on <a href="https://www.instagram.com/maddiesimens/" target="_blank" class="underline">Instagram</a> or <a href="https://twitter.com/maddiesimens" target="_blank" class="underline">Twitter.</p>
+       <p>I live in San Francisco by way of Boston by way of Cleveland. Keep up with me on <a href="https://www.instagram.com/maddiesimens/" target="_blank" class="underline">Instagram</a> or <a href="https://twitter.com/maddiesimens" target="_blank" class="underline">Twitter</a>.</p>
 
 
       <div class="spacer48"></div>
